--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.tsx\""
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "^1.1.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.1",
-    "@mui/material": "^5.2.3",
+    "@mdi/js": "^6.5.95",
+    "@mdi/react": "^1.5.0",
     "fontsource-roboto": "^4.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "16.11.12",
